GitInfo bug fixes

--- a/build.gradle
+++ b/build.gradle
@@ -204,7 +204,7 @@ dependencies {
         implementation platform("io.github.jhipster:jhipster-dependencies:${jhipster_dependencies_version}")
     }
 
-    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    implementation group: 'org.apache.clerezza.ext', name: 'org.json.simple', version: '0.4'
 
     // Use ", version: jhipster_dependencies_version, changing: true" if you want
     // to use a SNAPSHOT release instead of a stable release
