--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
   },
   "defaultProject": "gitimporter",
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": false
   }
 }
